<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alignmentMode="alignMargins"
            android:columnCount="1"
            android:columnOrderPreserved="false"
            android:rowCount="3">

            <android.support.v7.widget.CardView
                style="@style/CardViewThemeLand"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="@dimen/cardView_cornerRadius"
                app:cardElevation="@dimen/cardView_elevation">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/question_1"
                        style="@style/QuestionTheme"
                        android:text="@string/question_1" />

                    <EditText
                        android:id="@+id/answer_1_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_margin="16dp"
                        android:hint="@string/hint_year"
                        android:inputType="date"
                        android:textAppearance="?android:textAppearanceMedium" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                style="@style/CardViewThemeLand"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="@dimen/cardView_cornerRadius"
                app:cardElevation="@dimen/cardView_elevation">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/question_2"
                        style="@style/QuestionTheme"
                        android:text="@string/question_2" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:layout_margin="16dp">

                        <Button
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_gravity="center"
                            android:background="@drawable/subtract_button_background"
                            android:onClick="reduceTrophies"
                            android:text="@string/subtract"
                            android:textAppearance="?android:textAppearanceLarge"
                            android:textColor="#b71c1c" />

                        <LinearLayout
                            android:id="@+id/trophies"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:orientation="horizontal"
                            android:padding="16dp"
                            android:text="@string/quantity_trophies"
                            android:textAppearance="?android:textAppearanceLarge">

                            <ImageView
                                android:id="@+id/trophy_1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:contentDescription="@string/trophy_img"
                                android:src="@drawable/trophy" />

                        </LinearLayout>


                        <Button
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_gravity="center"
                            android:background="@drawable/add_button_background"
                            android:onClick="addTrophies"
                            android:text="@string/add"
                            android:textAppearance="?android:textAppearanceLarge"
                            android:textColor="#1B5E20" />
                    </LinearLayout>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                style="@style/CardViewThemeLand"
                app:cardCornerRadius="@dimen/cardView_cornerRadius"
                app:cardElevation="@dimen/cardView_elevation">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/question_3"
                        style="@style/QuestionTheme"
                        android:text="@string/question_3" />

                    <RadioGroup
                        android:id="@+id/group_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/radio_uruguay"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:drawableLeft="@drawable/uru"
                            android:drawableStart="@drawable/uru"
                            android:onClick="uncheckGroup2"
                            android:text="@string/uruguay"
                            android:textSize="12sp" />

                        <RadioButton
                            android:id="@+id/radio_argentina"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:drawableLeft="@drawable/arg"
                            android:drawableStart="@drawable/arg"
                            android:onClick="uncheckGroup2"
                            android:text="@string/argentina"
                            android:textSize="12sp" />

                        <RadioButton
                            android:id="@+id/radio_germany"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:drawableLeft="@drawable/ger"
                            android:drawableStart="@drawable/ger"
                            android:onClick="uncheckGroup2"
                            android:text="@string/germany"
                            android:textSize="12sp" />
                    </RadioGroup>

                    <RadioGroup
                        android:id="@+id/group_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginBottom="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:orientation="vertical"
                        tools:ignore="RelativeOverlap">

                        <RadioButton
                            android:id="@+id/radio_costaRica"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:drawableLeft="@drawable/crc"
                            android:drawableStart="@drawable/crc"
                            android:onClick="uncheckGroup1"
                            android:text="@string/costa_rica"
                            android:textSize="12sp" />

                        <RadioButton
                            android:id="@+id/radio_brazil"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:drawableLeft="@drawable/bra"
                            android:drawableStart="@drawable/bra"
                            android:onClick="uncheckGroup1"
                            android:text="@string/brazil"
                            android:textSize="12sp" />

                        <RadioButton
                            android:id="@+id/radio_france"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:drawableLeft="@drawable/fra"
                            android:drawableStart="@drawable/fra"
                            android:onClick="uncheckGroup1"
                            android:text="@string/france"
                            android:textSize="12sp" />
                    </RadioGroup>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                style="@style/CardViewThemeLand"
                app:cardCornerRadius="@dimen/cardView_cornerRadius"
                app:cardElevation="@dimen/cardView_elevation">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/question_4"
                        style="@style/QuestionTheme"
                        android:text="@string/question_4" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:orientation="vertical"
                        android:paddingBottom="16dp"
                        android:paddingEnd="8dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="8dp"
                        android:paddingStart="16dp">

                        <CheckBox
                            android:id="@+id/check_belgium"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:drawableLeft="@drawable/bel"
                            android:drawableStart="@drawable/bel"
                            android:text="@string/belgium"
                            android:textSize="12sp"
                            tools:ignore="NestedWeights" />

                        <CheckBox
                            android:id="@+id/check_mexico"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:drawableLeft="@drawable/mex"
                            android:drawableStart="@drawable/mex"
                            android:text="@string/mexico"
                            android:textSize="12sp" />

                        <CheckBox
                            android:id="@+id/check_sweden"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:drawableLeft="@drawable/swe"
                            android:drawableStart="@drawable/swe"
                            android:text="@string/sweden"
                            android:textSize="12sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:orientation="vertical"
                        android:paddingBottom="16dp"
                        android:paddingEnd="16dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="16dp"
                        android:paddingStart="8dp"
                        tools:ignore="RelativeOverlap">

                        <CheckBox
                            android:id="@+id/check_russia"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:drawableLeft="@drawable/rus"
                            android:drawableStart="@drawable/rus"
                            android:text="@string/russia"
                            android:textSize="12sp"
                            tools:ignore="NestedWeights" />

                        <CheckBox
                            android:id="@+id/check_portugal"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:drawableLeft="@drawable/por"
                            android:drawableStart="@drawable/por"
                            android:text="@string/portugal"
                            android:textSize="12sp" />

                        <CheckBox
                            android:id="@+id/check_spain"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:drawableLeft="@drawable/esp"
                            android:drawableStart="@drawable/esp"
                            android:text="@string/spain"
                            android:textSize="12sp" />

                    </LinearLayout>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                style="@style/CardViewThemeLand"
                app:cardCornerRadius="8dp"
                app:cardElevation="1dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/question_5"
                        style="@style/QuestionTheme"
                        android:text="@string/question_5" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:layout_margin="16dp">

                        <Button
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:background="@drawable/subtract_button_background"
                            android:onClick="reduceMatches"
                            android:text="@string/subtract"
                            android:textAppearance="?android:textAppearanceLarge"
                            android:textColor="#b71c1c" />

                        <TextView
                            android:id="@+id/matches"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:layout_marginStart="16dp"
                            android:text="@string/quantity_matches"
                            android:textAppearance="?android:textAppearanceLarge" />


                        <Button
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:background="@drawable/add_button_background"
                            android:onClick="addMatches"
                            android:text="@string/add"
                            android:textAppearance="?android:textAppearanceLarge"
                            android:textColor="#1B5E20" />
                    </LinearLayout>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

        </GridLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00ffffff">

        <Button
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/submit_button_background"
            android:onClick="checkAnswers"
            android:text="@string/submit"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#9e9e9e" />
    </LinearLayout>

</LinearLayout>
